--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
             jniLibs.srcDirs = ['libs']
         }
     }
+    buildToolsVersion '25.0.0'
 }
 
 dependencies {
@@ -59,4 +60,6 @@ dependencies {
     compile androidDependencies.support_v4
     //debugCompile dataDependencies.leakcanary
     compile project(':gsyVideoPlayer')
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.android.support:design:22.2.1'
 }
