--- a/app/build.gradle
+++ b/app/build.gradle
@@ -62,4 +62,7 @@ dependencies {
     compile project(':gsyVideoPlayer')
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:22.2.1'
+    compile 'com.android.support:cardview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:21.0.0'
+
 }
